# SurveyScraper

./: .gitignore  README.md  build.py  build.spec  config_settings.json  mag_decl_webscrape.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  speleoliti_handler.py  survey_data.json  surveyscraper.py  surveyscraper_README.txt  surveyscraper_README_EN.txt  surveyscraper_README_en.txt  surveyscraper_v2.py  surveyscraper_v3.py
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md
surveyscraper/: __main__.py  i18n.py  logging_setup.py  paths.py
surveyscraper/core/: errors.py
surveyscraper/parsers/: __init__.py  base.py  pockettopo.py  qave.py  topodroid.py
surveyscraper/services/: config_store.py  exporter.py  magdec.py  speleoliti.py
testing/: geyrovo.txt  jama_Edison_2.csv
tests/: conftest.py  test_i18n.py  test_magdec.py  test_parsers.py
tests/fixtures/: krkuž_uskrs.csv
tests/golden/: pockettopo_geyrovo.json  topodroid_jama_Edison_2.json  topodroid_krkuz_uskrs.json
