[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surveyscraper"
description = "GUI tool for cave surveyors: import survey data, filter splays, apply magnetic declination, and compute cave dimensions via Speleoliti Online."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lovel Kukuljan" }]
dynamic = ["version"]
dependencies = [
    "customtkinter>=5.1.2,<6",
    "tkintermapview>=1.29",
    "Pillow>=9.4.0",
    "requests>=2.28.2",
    "selenium>=4.4.3",
    "webdriver-manager>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3.10",
    "responses>=0.23",
    "ruff>=0.4",
]

[project.scripts]
surveyscraper = "surveyscraper.__main__:main"

[project.urls]
Repository = "https://github.com/LovelK7/SurveyScraper"

[tool.setuptools]
packages = ["surveyscraper"]

[tool.setuptools.dynamic]
version = { attr = "surveyscraper.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
